objects/Contact_Address_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Address Details</relationshipLabel>
        <relationshipName>Contact_Address_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Address Details</relationshipLabel>
        <relationshipName>Contact_Address_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Index__c</fullName>
        <label>Current Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_CFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to CFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_1__c</fullName>
        <label>Shipping Address 1</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_2__c</fullName>
        <label>Shipping Address 2</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country_Code__c</fullName>
        <label>Shipping Country Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country_Name__c</fullName>
        <label>Shipping Country Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <formula>If(Current_Index__c = 0 || ISNULL(Current_Index__c), Shipping_City__c, Shipping_City__c&amp; &quot;&quot; &amp;TEXT(Current_Index__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <label>Contact Address Detail</label>
    <nameField>
        <label>Contact Address Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Address Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>